Auto stash before merge of "master" and "origin/master"

--- a/CA1_ORM_REST_JS/src/main/webapp/index.html
+++ b/CA1_ORM_REST_JS/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!DOCTYPE html> 
+
 <html> 
     <head> 
         
@@ -28,11 +28,11 @@
     </div> 
     <div class="collapse navbar-collapse" id="myNavbar" > 
       <ul class="nav navbar-nav"> 
-        <li><a href="http://207.154.197.214:8080/FogExamProjectGroup5A/index.html">Person</a></li> 
-        <li><a href="https://www.johannesfog.dk/byggecenter/om-fog/">Company</a></li> 
-        <li><a href="https://johannesfog.dk/byggecenter/find-butik/">Phone</a></li> 
-        <li><a href="http://207.154.197.214:8080/FogExamProjectGroup5A/index.html">Address</a></li> 
-        <li><a href="https://www.johannesfog.dk/byggecenter/om-fog/">Hobby</a></li> 
+        <li><a href="http://localhost:8084/CA1_ORM_REST_JS/person.html">Person</a></li> 
+        <li><a href="http://localhost:8084/CA1_ORM_REST_JS/company.html">Company</a></li> 
+        <li><a href="http://localhost:8084/CA1_ORM_REST_JS/phone.html">Phone</a></li> 
+        <li><a href="http://localhost:8084/CA1_ORM_REST_JS/address.html">Address</a></li> 
+        <li><a href="http://localhost:8084/CA1_ORM_REST_JS/hobby.html">Hobby</a></li> 
          
       </ul> 
       <ul class="nav navbar-nav navbar-right"> 
