--- a/CA1_ORM_REST_JS/src/main/webapp/person.html
+++ b/CA1_ORM_REST_JS/src/main/webapp/person.html
@@ -6,11 +6,43 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
+        <title>Phone search</title> 
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
+        <link type="text/css" rel="stylesheet" href="CSS/CAGROUP5.css" > 
+    </head> 
     <body>
-        <div>TODO write content</div>
+        <nav class="navbar navbar-inverse"> 
+            <div class="container-fluid"> 
+                <div class="navbar-header"> 
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar"> 
+                        <span class="icon-bar"></span> 
+                        <span class="icon-bar"></span> 
+                        <span class="icon-bar"></span>                         
+                        <span class="icon-bar"></span> 
+                        <span class="icon-bar"></span>                         
+                    </button> 
+                </div> 
+                <div class="collapse navbar-collapse" id="myNavbar" > 
+                    <ul class="nav navbar-nav"> 
+                        <li><a href="http://localhost:8084/CA1_ORM_REST_JS/person.html">Person</a></li> 
+                        <li><a href="http://localhost:8084/CA1_ORM_REST_JS/company.html">Company</a></li> 
+                        <li><a href="http://localhost:8084/CA1_ORM_REST_JS/phone.html">Phone</a></li> 
+                        <li><a href="http://localhost:8084/CA1_ORM_REST_JS/address.html">Address</a></li> 
+                        <li><a href="http://localhost:8084/CA1_ORM_REST_JS/hobby.html">Hobby</a></li> 
+
+                    </ul> 
+                    <ul class="nav navbar-nav navbar-right"> 
+                        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li> 
+                    </ul> 
+                </div> 
+            </div> 
+        </nav> 
+        <form action="/action_page.php">
+            Phone number: <input type="text" name="FirstName" value="Mickey"><br>
+            <input type="submit" value="Submit">
+        </form>
     </body>
 </html>
