--- a/CA1_ORM_REST_JS/src/main/webapp/phone.html
+++ b/CA1_ORM_REST_JS/src/main/webapp/phone.html
@@ -41,7 +41,7 @@ and open the template in the editor.
             </div> 
         </nav> 
         <form action="/action_page.php">
-            Phone number: <input type="text" name="FirstName" value="Mickey"><br>
+            Phone number: <input type="text"><br>
             <input type="submit" value="Submit">
         </form>
     </body>
