--- a/CA1_ORM_REST_JS/src/main/webapp/company.html
+++ b/CA1_ORM_REST_JS/src/main/webapp/company.html
@@ -43,11 +43,11 @@ and open the template in the editor.
         </nav> 
         <div id = "companyPost">
         <form>
-             Company Name: <input type="text" id="CompanyName" value=""><br>
-             Company Description: <input type="text" id="CompanyDescription" value=""><br>
-             Company CVR: <input type="text" id="CompanyCVR" value=""><br>
-             Company number of employees: <input type="text" id="CompanyNumEmp" value=""><br>
-             Company market value: <input type="text" id="CompanyValue" value=""><br>
+             Company Name: <input type="text" id="CompanyName" value="213213"><br>
+             Company Description: <input type="text" id="CompanyDescription" value="12312"><br>
+             Company CVR: <input type="text" id="CompanyCVR" value="32132"><br>
+             Company number of employees: <input type="text" id="CompanyNumEmp" value="12312"><br>
+             Company market value: <input type="text" id="CompanyValue" value="12312"><br>
              <button id ="createComp" onclick="createCompany()" name="Submit">Submit</button>
         </form>
         </div>
