--- a/CA1_ORM_REST_JS/src/main/webapp/person.html
+++ b/CA1_ORM_REST_JS/src/main/webapp/person.html
@@ -41,8 +41,9 @@ and open the template in the editor.
             </div> 
         </nav> 
         <form action="/action_page.php">
-            Phone number: <input type="text" name="FirstName" value="Mickey"><br>
-            <input type="submit" value="Submit">
+            First name: <input type="text" id="firstName" value=""><br>
+             Last name: <input type="text" id="lastName" value=""><br>
+             <button id ="createComp" onclick="createPerson()" name="Submit">Submit</button>
         </form>
     </body>
 </html>
