--- a/CA1_ORM_REST_JS/src/main/webapp/person.html
+++ b/CA1_ORM_REST_JS/src/main/webapp/person.html
@@ -40,10 +40,10 @@ and open the template in the editor.
                 </div> 
             </div> 
         </nav> 
-        <form action="/action_page.php">
+        <div id = "personPost">
             First name: <input type="text" id="firstName" value=""><br>
-             Last name: <input type="text" id="lastName" value=""><br>
-             <button id ="createComp" onclick="createPerson()" name="Submit">Submit</button>
-        </form>
+            Last name: <input type="text" id="lastName" value=""><br>
+            <button id ="createComp" onclick="createPerson()" name="Submit">Submit</button>
+        </div>
     </body>
 </html>
