--- a/CA1_ORM_REST_JS/src/main/webapp/index.html
+++ b/CA1_ORM_REST_JS/src/main/webapp/index.html
@@ -28,11 +28,11 @@
                 </div> 
                 <div class="collapse navbar-collapse" id="myNavbar" > 
                     <ul class="nav navbar-nav"> 
-                        <li><a href="http://localhost:8084/CA1_ORM_REST_JS/person.html">Person</a></li> 
-                        <li><a href="http://localhost:8084/CA1_ORM_REST_JS/company.html">Company</a></li> 
-                        <li><a href="http://localhost:8084/CA1_ORM_REST_JS/phone.html">Phone</a></li> 
-                        <li><a href="http://localhost:8084/CA1_ORM_REST_JS/address.html">Address</a></li> 
-                        <li><a href="http://localhost:8084/CA1_ORM_REST_JS/hobby.html">Hobby</a></li> 
+                        <li><a href="person.html">Person</a></li> 
+                        <li><a href="company.html">Company</a></li> 
+                        <li><a href="phone.html">Phone</a></li> 
+                        <li><a href="address.html">Address</a></li> 
+                        <li><a href="hobby.html">Hobby</a></li> 
 
                     </ul> 
                     <ul class="nav navbar-nav navbar-right"> 
