--- a/CA1_ORM_REST_JS/src/main/webapp/index.html
+++ b/CA1_ORM_REST_JS/src/main/webapp/index.html
@@ -1,78 +1,73 @@
 <!DOCTYPE html>
 
-<html> 
-    <head> 
+<html>
 
-        <title>Semi Big Data</title> 
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
-        <link type="text/css" rel="stylesheet" href="CSS/CAGROUP5.css" > 
-    </head> 
-    <body> 
+<head>
 
+    <title>Semi Big Data</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link type="text/css" rel="stylesheet" href="CSS/CAGROUP5.css">
+</head>
 
-        <nav class="navbar navbar-inverse"> 
-            <div class="container-fluid"> 
-                <div class="navbar-header"> 
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar"> 
+<body>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar"> 
                         <span class="icon-bar"></span> 
                         <span class="icon-bar"></span> 
                         <span class="icon-bar"></span>                         
                         <span class="icon-bar"></span> 
                         <span class="icon-bar"></span>                         
+                    </button>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li><a href="person.html">Person</a></li>
+                    <li><a href="company.html">Company</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div id="authors">Kristian Krog, Anton Kornholt, Kasper Vink og Kasper Breindal</div>
+    <div id="class">COS</div>
+    <div id="group">5</div>
+    <div class="container text-center">
+        <h3>Vælg noget data du vil manipulere fra fanen i toppen</h3><br>
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="well">
+                    <p>On this site you can easily create, read, update and delete information about specific objects</p>
+                </div>
+                <div class="well">
+                    <p>After you have chosen a subject you can edit them</p>
+                </div>
 
-                    </button> 
+                <div class="col-sm-6">
+                    <div class="well">
+                        <p>On this site you can easily create, read, update and delete information about specific objects</p>
+                    </div>
+                    <div class="well">
+                        <p>After you have chosen a subject you can edit them</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <footer class="container-fluid text-center">
+            <div class="pull-left">
+                Semi Big Data - Data Road 1337 - 1337 Data Town - CVR-nr. 13371377
+            </div>
+            <div class="pull-right">
+                All data are fake don't sue please!
+            </div>
+        </footer>
+</body>
 
-                </div> 
-                <div class="collapse navbar-collapse" id="myNavbar" > 
-                    <ul class="nav navbar-nav"> 
-                        <li><a href="person.html">Person</a></li> 
-                        <li><a href="company.html">Company</a></li> 
- 
-
-                    </ul> 
-                    <ul class="nav navbar-nav navbar-right"> 
-                        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li> 
-                    </ul> 
-                </div> 
-            </div> 
-        </nav> 
-
-        <div class="container text-center">     
-            <h3>Vælg noget data du vil manipulere fra fanen i toppen</h3><br> 
-            <div class="row"> 
-
-                <div class="col-sm-6"> 
-                    <div class="well"> 
-                        <p>On this site you can easily create, read, update and delete information about specific objects</p> 
-                    </div> 
-                    <div class="well"> 
-                        <p>After you have chosen a subject you can edit them</p> 
-                    </div> 
-
-                    <div class="col-sm-6"> 
-                        <div class="well"> 
-                            <p>On this site you can easily create, read, update and delete information about specific objects</p> 
-                        </div> 
-                        <div class="well"> 
-                            <p>After you have chosen a subject you can edit them</p> 
-                        </div> 
-                    </div> 
-                </div> 
-            </div> 
-            <br> 
-
-            <footer class="container-fluid text-center"> 
-                <div class="pull-left"> 
-                    Semi Big Data - Data Road 1337 - 1337 Data Town - CVR-nr. 13371377 
-                </div> 
-                <div class="pull-right"> 
-                    All data are fake don't sue please! 
-                </div> 
-            </footer> 
-
-    </body> 
-</html> 
-
+</html>
