now is more button very nice

--- a/CA1_ORM_REST_JS/src/main/webapp/person.html
+++ b/CA1_ORM_REST_JS/src/main/webapp/person.html
@@ -44,5 +44,9 @@ and open the template in the editor.
             Last name: <input type="text" id="lastName" value=""><br>
             <button id ="createComp" onclick="createPerson()" name="Submit">Submit</button>
         </div>
+        <div>List of all results:</div>
+        <form>
+            <input type="button" value="Results" onclick="window.location.href = 'http://dev.breindal.me/CA1_ORM_REST_JS/api/person/complete'" />
+        </form>
     </body>
 </html>
