--- a/CA1_ORM_REST_JS/src/main/webapp/company.html
+++ b/CA1_ORM_REST_JS/src/main/webapp/company.html
@@ -47,6 +47,10 @@ and open the template in the editor.
              Company market value: <input type="text" id="CompanyValue" value="12312"><br>
              <button id ="createComp" onclick="createCompany()" name="Submit">Submit</button>
         </div>
+        <div>List of all results:</div>
+        <form>
+<input type="button" value="Results" onclick="window.location.href='http://dev.breindal.me/CA1_ORM_REST_JS/api/company/complete'" />
+</form>
         
         
     </body>
